media/pms-unicorn/deployment-transcoder-1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pms-unicorn-1
  namespace: media
  annotations:
    flux.weave.works/automated: 'false'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pms-unicorn-1
  template:
    metadata:
      labels:
        app: pms-unicorn-1
    spec:
      nodeSelector:
        kubernetes.io/hostname: knode1
      volumes:
      - name: pms-unicorn
        hostPath:
          path: /mnt/BLOCK/pms-unicorn
          type: Directory
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: transcode
        emptyDir:
          medium: Memory
      containers:
      - name: pms-unicorn
        image: nlopez/unicorn-transcoder:3
        # resources:
        #   limits:
        #     gpu.intel.com/i915: 1
        volumeMounts:
        - name: pms-unicorn
          subPath: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: media
          mountPath: /media
          readOnly: true
        ports:
        - name: unicorn-lb
          containerPort: 3001
        readinessProbe:
          tcpSocket:
            port: unicorn-lb
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: unicorn-lb
          initialDelaySeconds: 15
          periodSeconds: 20
        lifecycle:
          postStart:
            exec:
              command: ["/bin/rm", "-f", "/usr/lib/plexmediaserver/Plex Relay"]
