media/pms-unicorn/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pms-unicorn
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: pms-unicorn
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 3001
