media/pms-unicorn/redis.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pms-unicorn-redis
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: pms-unicorn-redis
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: pms-unicorn-redis
  namespace: media
spec:
  selector:
    app: pms-unicorn-redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pms-unicorn-redis
  namespace: media
  annotations:
    flux.weave.works/automated: 'false'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pms-unicorn-redis
    spec:
      volumes:
      - name: redis-config
        configMap:
          name: pms-unicorn-redis
      containers:
      - name: redis
        image: redis:5-alpine
        command: ["redis-server"]
        args: ["/usr/local/etc/redis/redis.conf"]
        volumeMounts:
        - name: redis-config
          mountPath: /usr/local/etc/redis
